// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when isFree is false and there is a price range 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "flexDirection": "row",
      "height": 108,
      "overflow": "hidden",
    }
  }
>
  <ImageBackground
    resizeMode="cover"
    source={
      Object {
        "uri": "https://image.jpg",
      }
    }
    style={
      Object {
        "backgroundColor": "#C1C1C1",
        "height": 108,
        "width": 114,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#989898",
          "borderRadius": 2,
          "height": 23,
          "paddingHorizontal": 8,
          "position": "absolute",
        }
      }
    >
      <Text
        markdown={false}
        style={
          Object {
            "color": "rgb(226, 226, 226)",
            "fontSize": 14,
          }
        }
        type="text"
      >
        From £12
      </Text>
    </View>
  </ImageBackground>
  <View
    style={
      Object {
        "flex": 1,
        "padding": 8,
      }
    }
  >
    <Text
      markdown={false}
      style={
        Object {
          "fontSize": 14,
          "lineHeight": 20,
        }
      }
      type="text"
    >
      12:12 - 13:12
    </Text>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <Text
        markdown={false}
        style={
          Object {
            "color": "#272727",
            "fontFamily": "Poppins-SemiBold",
            "fontSize": 16,
            "lineHeight": 20,
            "paddingTop": 4,
          }
        }
        type="text"
      >
        name
      </Text>
    </View>
    <Text
      markdown={false}
      style={
        Object {
          "fontSize": 12,
          "lineHeight": 16,
          "paddingTop": 4,
        }
      }
      type="text"
    >
      location
    </Text>
  </View>
</View>
`;

exports[`renders correctly when isFree is false and there's only one price 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "flexDirection": "row",
      "height": 108,
      "overflow": "hidden",
    }
  }
>
  <ImageBackground
    resizeMode="cover"
    source={
      Object {
        "uri": "https://image.jpg",
      }
    }
    style={
      Object {
        "backgroundColor": "#C1C1C1",
        "height": 108,
        "width": 114,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#989898",
          "borderRadius": 2,
          "height": 23,
          "paddingHorizontal": 8,
          "position": "absolute",
        }
      }
    >
      <Text
        markdown={false}
        style={
          Object {
            "color": "rgb(226, 226, 226)",
            "fontSize": 14,
          }
        }
        type="text"
      >
        £12
      </Text>
    </View>
  </ImageBackground>
  <View
    style={
      Object {
        "flex": 1,
        "padding": 8,
      }
    }
  >
    <Text
      markdown={false}
      style={
        Object {
          "fontSize": 14,
          "lineHeight": 20,
        }
      }
      type="text"
    >
      12:12 - 13:12
    </Text>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <Text
        markdown={false}
        style={
          Object {
            "color": "#272727",
            "fontFamily": "Poppins-SemiBold",
            "fontSize": 16,
            "lineHeight": 20,
            "paddingTop": 4,
          }
        }
        type="text"
      >
        name
      </Text>
    </View>
    <Text
      markdown={false}
      style={
        Object {
          "fontSize": 12,
          "lineHeight": 16,
          "paddingTop": 4,
        }
      }
      type="text"
    >
      location
    </Text>
  </View>
</View>
`;

exports[`renders correctly when isFree is true 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "flexDirection": "row",
      "height": 108,
      "overflow": "hidden",
    }
  }
>
  <ImageBackground
    resizeMode="cover"
    source={
      Object {
        "uri": "https://image.jpg",
      }
    }
    style={
      Object {
        "backgroundColor": "#C1C1C1",
        "height": 108,
        "width": 114,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#989898",
          "borderRadius": 2,
          "height": 23,
          "paddingHorizontal": 8,
          "position": "absolute",
        }
      }
    >
      <Text
        markdown={false}
        style={
          Object {
            "color": "rgb(226, 226, 226)",
            "fontSize": 14,
          }
        }
        type="text"
      >
        Free
      </Text>
    </View>
  </ImageBackground>
  <View
    style={
      Object {
        "flex": 1,
        "padding": 8,
      }
    }
  >
    <Text
      markdown={false}
      style={
        Object {
          "fontSize": 14,
          "lineHeight": 20,
        }
      }
      type="text"
    >
      12:12 - 13:12
    </Text>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <Text
        markdown={false}
        style={
          Object {
            "color": "#272727",
            "fontFamily": "Poppins-SemiBold",
            "fontSize": 16,
            "lineHeight": 20,
            "paddingTop": 4,
          }
        }
        type="text"
      >
        name
      </Text>
    </View>
    <Text
      markdown={false}
      style={
        Object {
          "fontSize": 12,
          "lineHeight": 16,
          "paddingTop": 4,
        }
      }
      type="text"
    >
      location
    </Text>
  </View>
</View>
`;
